--- a/index.html
+++ b/index.html
@@ -67,10 +67,7 @@
 	 <div align="center"><h1>Talilo Tarlison Passos de Araujo</h1></div>
 	 <div align=center><b>SOBRE MIM:</b></div><br>
     <div><p>Olá, me chamo <strong>Talilo Tarlison</strong> Possui ensino-medio completo Ceti Augustinho Brandão (2013). Estudante de Administração pela UESPI-UAPI (2022),  Tecnico em Enfermagem pela TECNORT (2021), e Desenvolvimento Web Full-Stack pela Alura (2022). Estou atualmente estudando HTML5. CSS e JS, React, Node, Bootstrap, MySQL...</p>
-    	<p>Rua Luiza Machado Almeida – Cocal dos Alves – Piauí
-Fones: (86) 981318021 / – Email: ttarlison@gmail.com
-Brasileira – Idade: 26 anos – Estado Civil: Solteiro, sem filhos
-</p></div><br>
+    	</div><br>
     <div alin="center"><b>MINHAS iNFORMAÇÕES</b><div>
     <ul>
     	<li><strong>E-mail:</strong><a href="mailto:ttarlison@gmil.com"><font color="#191970">ttarlison@gmil.com</font></a></li>
