--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<title>Profile</title> <!--titulo da pagina -->
 	<style type="text/css"> 
 
+*{margin: 15px;}
 				body { 
   				font-family:Hermit, monospace;
   				}
@@ -49,7 +50,7 @@
 <body>
 		<header>
   				<div class="logo">
-				  			<img src="./imagens/perfil.png" alt="Moodle" width="100px" height="100px">
+				  			<img src="./imagens/perfil.png" alt="Moodle" width="150px" height="150px">
 				  			
 				  </div>
 				  <nav class="menu">
