--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     	</div><br>
     <div alin="center"><b>MINHAS iNFORMAÇÕES</b><div>
     <ul>
-    	<li><strong>E-mail:</strong><a href="mailto:ttarlison@gmil.com"><font color="#191970">ttarlison@gmil.com</font></a></li>
+    	<li><strong>E-mail:</strong><a href="mailto:ttarlison@gmail.com"><font color="#191970">ttarlison@gmil.com</font></a></li>
     	<li><strong>Facebook:</strong><a href="http://www.facebook.com/talilo_tarlison"><font color="#191970">http://www.facebook.com/talilo_tarlison</font></a>
     	<li><strong>Instagram:</strong><a href="http://www.instagram.com/talilo_tarlison"><font color="#191970">http://www.instagram.com/talilo_tarlison</font></a></li>
     	<li><strong>GitHub:</strong><a href="https://github.com/talilotarlison?tab=repositories"><font color="#191970">http://www.instagram.com/talilo_tarlison</font></a></li>
