--- a/resulmo.html
+++ b/resulmo.html
@@ -11,8 +11,8 @@
 		<h1>Curriculo Vitae</h1>
 		
 		<ul id="menu">
-			<li><a href="resulmo.html">Resumido</a></li>
-			<li class="ativo">Completo</li>
+			<li><a class="ativo">Resumido</a></li>
+			<li><a href="index.html">Completo</li>
 		</ul>
 		
 		<div class="secao">
@@ -50,14 +50,9 @@
 			<p><label>Curso</label>BACHACHARELADO EM ADMINISTRAÇÃO - UESPI/UAPI</p>
 			<p><label>Curso</label>TECNICO EM ENFERMAGEM - TECNORT</p>
 			<p><label>Curso</label>DESENVOLVIMENTO WEB FULL-STACK - ALURA - UDEMY</p>
-
 			<p><label>Curso</label>INFORMATICA BASICA</p>
-			<p><b> <i>(Rede de computadores,Segurança da Informação, Hardware e Software, Windows e Linux, Microsoft Word, Microsoft Exel, Microsoft PowerPoint,Navegadores,E-mail,Armazenamento de dados em cloud computing, Arquitetura e Administração de banco de Dados,Ambiente de Servidores,Internet,Segurança na Internet,Segurança da Informação,Big Data, Data,Mining e Data Warehouse,Configurações de Rede)</i> </b></p>
-			
 			<p><label>Curso</label>VENDAS (PRONATEC)</p>
-			<p><b><i>(Desenvolvimento Pessoal e Interpessoal, Ética e Orientação Profissional, Noções de Saúde e Seguraça no Trabalho, Fundações de Administração e Marketing, Atendimento ao Cliente, Técnicas de Vendedor, Matemática Comercial e Financeira, Empreendedorismo)</i></b></p>
 			<p><label>Curso</label>GERENCIAMENTO ADMINISTRATIVO</p>
-			<p><b><i>(Empreendedorismo, Gestão de administração de pequenas e médias empresas, Gestão de Recursos humanos, Auxiliar Administrativo, Técnicas de negociações,Planejamento estratégio);GESTÃO DE FINANÇAS ;EDUCAÇÃO FINANCEIRA;INVESTIMENTO;MARKTING; MARKTING DIGITAL.</i></b></p>
 			<p><label>Curso</label>ATENDENTE DE FARMACIA - UNISIC,ATENDENTE DE FARMACIA E DROGARIA,AGENTE DE ANDEMIAS,ATENDIMENTO DOMICILIAR,ENFERMAGEM DOMICILIAR,RECEPCIONISTA DE CLINICAS MEDICA,PRIMEIROS SOCORROS.</p>
 			<p><label>Curso</label>ASTRONOMIA,ASTROFISICA,COSMOLOGIA- UFSC</p>
 		</div>
