--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		
 		<ul id="menu">
 			<li><a class="ativo">Resumido</a></li>
-			<li><a href="index.html">Completo</li>
+			<li><a href="completo.html">Completo</li>
 		</ul>
 		
 		<div class="secao">
