--- a/completo.html
+++ b/completo.html
@@ -11,7 +11,7 @@
 		<h1>Curriculo Vitae</h1>
 		
 		<ul id="menu">
-			<li><a href="resulmo.html">Resumido</a></li>
+			<li><a href="index.html">Resumido</a></li>
 			<li class="ativo">Completo</li>
 		</ul>
 		
