--- a/completo.html
+++ b/completo.html
@@ -18,10 +18,10 @@
 		<div class="secao">
 			<h2>Dados Pessoais</h2>			
 				<div id="hcard-Talilo-Tarlison" class="vcard">
-				  <img src="imagens/perfil.png"  width="100px" alt="photo of Talilo" class="photo"/>
+				  <img src="imagens/perfil.png"  width="80px" alt="photo of Talilo" class="photo"/><br>
 				 <span class="given-name">Talilo Tarlison Passos de Araujo</span>
-				  <span class="additional-name">(Talilo</span>
-				  <span class="family-name">Tarlison)</span>
+				  <span class="additional-name">/ Talilo</span>
+				  <span class="family-name">Araujo</span>
 				<sup><a href="#1-fn" id="fn1" title="veja o rodapé">1</a></sup>
 
 				 <a class="email" href="mailto:ttarlison@gmail.com">ttarlison@gmail.com</a>
@@ -30,7 +30,7 @@
 				<div class="adr">
 				  <span class="locality">Cidade</span>
 				, 
-				  <span class="region">Estado</span>
+				  <span class="region">Estado , Brasil</span>
 
 				 </div>
 				</div>
@@ -58,8 +58,8 @@
 			<p><b><i>(Desenvolvimento Pessoal e Interpessoal, Ética e Orientação Profissional, Noções de Saúde e Seguraça no Trabalho, Fundações de Administração e Marketing, Atendimento ao Cliente, Técnicas de Vendedor, Matemática Comercial e Financeira, Empreendedorismo)</i></b></p>
 			<p><label>Curso</label>GERENCIAMENTO ADMINISTRATIVO</p>
 			<p><b><i>(Empreendedorismo, Gestão de administração de pequenas e médias empresas, Gestão de Recursos humanos, Auxiliar Administrativo, Técnicas de negociações,Planejamento estratégio);GESTÃO DE FINANÇAS ;EDUCAÇÃO FINANCEIRA;INVESTIMENTO;MARKTING; MARKTING DIGITAL.</i></b></p>
-			<p><label>Curso</label>ATENDENTE DE FARMACIA - UNISIC,ATENDENTE DE FARMACIA E DROGARIA,AGENTE DE ANDEMIAS,ATENDIMENTO DOMICILIAR,ENFERMAGEM DOMICILIAR,RECEPCIONISTA DE CLINICAS MEDICA,PRIMEIROS SOCORROS.</p>
-			<p><label>Curso</label>ASTRONOMIA,ASTROFISICA,COSMOLOGIA- UFSC</p>
+			<p><label>Curso</label>ATENDENTE DE FARMACIA (UNISIC),ATENDENTE DE FARMACIA E DROGARIA,AGENTE DE ANDEMIAS,ATENDIMENTO DOMICILIAR,ENFERMAGEM DOMICILIAR,RECEPCIONISTA DE CLINICAS MEDICA,PRIMEIROS SOCORROS.</p>
+			<p><label>Curso</label>ASTRONOMIA,ASTROFISICA,COSMOLOGIA (UFSC)</p>
 		</div>
 		
 		<div id="footnote">
