--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 		<div class="secao">
 			<h2>Dados Pessoais</h2>			
 				<div id="hcard-Talilo-Tarlison" class="vcard">
-				  <img src="imagens/perfil.png"  width="100px" alt="photo of Talilo" class="photo"/>
+				  <img src="imagens/perfil.png"  width="80px" alt="photo of Talilo" class="photo"/><br>
 				 <span class="given-name">Talilo Tarlison Passos de Araujo</span>
-				  <span class="additional-name">(Talilo</span>
-				  <span class="family-name">Tarlison)</span>
+				  <span class="additional-name">/ Talilo</span>
+				  <span class="family-name">Araujo</span>
 				<sup><a href="#1-fn" id="fn1" title="veja o rodapé">1</a></sup>
 
 				 <a class="email" href="mailto:ttarlison@gmail.com">ttarlison@gmail.com</a>
@@ -30,7 +30,7 @@
 				<div class="adr">
 				  <span class="locality">Cidade</span>
 				, 
-				  <span class="region">Estado</span>
+				  <span class="region">Estado, Brasil</span>
 
 				 </div>
 				</div>
@@ -53,8 +53,8 @@
 			<p><label>Curso</label>INFORMATICA BASICA</p>
 			<p><label>Curso</label>VENDAS (PRONATEC)</p>
 			<p><label>Curso</label>GERENCIAMENTO ADMINISTRATIVO</p>
-			<p><label>Curso</label>ATENDENTE DE FARMACIA - UNISIC,ATENDENTE DE FARMACIA E DROGARIA,AGENTE DE ANDEMIAS,ATENDIMENTO DOMICILIAR,ENFERMAGEM DOMICILIAR,RECEPCIONISTA DE CLINICAS MEDICA,PRIMEIROS SOCORROS.</p>
-			<p><label>Curso</label>ASTRONOMIA,ASTROFISICA,COSMOLOGIA- UFSC</p>
+			<p><label>Curso</label>ATENDENTE DE FARMACIA (UNISIC),ATENDENTE DE FARMACIA E DROGARIA,AGENTE DE ANDEMIAS,ATENDIMENTO DOMICILIAR,ENFERMAGEM DOMICILIAR,RECEPCIONISTA DE CLINICAS MEDICA,PRIMEIROS SOCORROS.</p>
+			<p><label>Curso</label>ASTRONOMIA,ASTROFISICA,COSMOLOGIA(UFSC)</p>
 		</div>
 		
 		<div id="footnote">
