--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		<div class="secao">
 			<h2>Formação</h2>
 			<p>Me chamo <strong>Talilo Tarlison</strong> ,tenho ensino-medio completo CETI Augustinho Brandão (2013). Estudante de Administração pela UESPI/UAPI (2022),  Tecnico em Enfermagem pela TECNORT (2021), e Desenvolvimento Web Full-Stack pela Alura (2022). Estou atualmente estudando HTML5. CSS e JS, React, Node, Bootstrap, MySQL...</p>
-			<p><label>Curso</label>BACHACHARELADO EM ADMINISTRAÇÃO - UESPI/UAPI</p>
+			<p><label>Curso</label>BACHARELADO EM ADMINISTRAÇÃO - UESPI/UAPI</p>
 			<p><label>Curso</label>TECNICO EM ENFERMAGEM - TECNORT</p>
 			<p><label>Curso</label>DESENVOLVIMENTO WEB FULL-STACK - ALURA - UDEMY</p>
 			<p><label>Curso</label>INFORMATICA BASICA</p>
