--- a/completo.html
+++ b/completo.html
@@ -18,10 +18,10 @@
 		<div class="secao">
 			<h2>Dados Pessoais</h2>			
 				<div id="hcard-Talilo-Tarlison" class="vcard">
-				  <img src="imagens/perfil.png"  width="150px" alt="photo of Talilo" class="photo"/><br>
+				  <img src="imagens/perfil.png"  width="200px" height="200px" alt="photo of Talilo" class="photo"/><br>
 				 <span class="given-name">Talilo Tarlison Passos de Araujo</span>
 				  <span class="additional-name">/ Talilo</span>
-				  <span class="family-name">Araujo</span>
+				  <span class="family-name">Tarlison</span>
 				<sup><a href="#1-fn" id="fn1" title="veja o rodapé">1</a></sup>
 
 				 <a class="email" href="mailto:ttarlison@gmail.com">ttarlison@gmail.com</a>
@@ -46,10 +46,10 @@
 
 		<div class="secao">
 			<h2>Formação</h2>
-			<p>Me chamo <strong>Talilo Tarlison</strong> ,tenho ensino-medio completo CETI Augustinho Brandão (2013). Estudante de Administração pela UESPI/UAPI (2022),  Tecnico em Enfermagem pela TECNORT (2021), e Desenvolvimento Web Full-Stack pela Alura (2022). Estou atualmente estudando HTML5. CSS e JS, React, Node, Bootstrap, MySQL...</p>
-			<p><label>Curso</label>BACHARELADO EM ADMINISTRAÇÃO - UESPI/UAPI</p>
-			<p><label>Curso</label>TECNICO EM ENFERMAGEM - TECNORT</p>
-			<p><label>Curso</label>DESENVOLVIMENTO WEB FULL-STACK - ALURA - UDEMY</p>
+			<p>Me chamo <strong>Talilo Tarlison</strong> ,tenho ensino-medio completo CETI Augustinho Brandão (2013). Estudante de Administração UESPI/UAPI (2022),  Tecnico em Enfermagem TECNORT (2021), e Desenvolvimento Web Full-Stack Alura (2022). Estou atualmente estudando HTML5. CSS e JS, React, Node, Bootstrap, MySQL...</p>
+			<p><label>Curso</label>Bacharelado em Administração (UESPI/UAPI)</p>
+			<p><label>Curso</label>Tecnico de Enfermagem (TECNORT )</p>
+			<p><label>Curso</label>Desenvolvimento Web Full-Stack (ALURA) (UDEMY)</p>
 
 			<p><label>Curso</label>INFORMATICA BASICA</p>
 			<p><b> <i>(Rede de computadores,Segurança da Informação, Hardware e Software, Windows e Linux, Microsoft Word, Microsoft Exel, Microsoft PowerPoint,Navegadores,E-mail,Armazenamento de dados em cloud computing, Arquitetura e Administração de banco de Dados,Ambiente de Servidores,Internet,Segurança na Internet,Segurança da Informação,Big Data, Data,Mining e Data Warehouse,Configurações de Rede)</i> </b></p>
