--- a/completo.html
+++ b/completo.html
@@ -57,7 +57,7 @@
 			<p><label>Curso</label>VENDAS (PRONATEC)</p>
 			<p><b><i>(Desenvolvimento Pessoal e Interpessoal, Ética e Orientação Profissional, Noções de Saúde e Seguraça no Trabalho, Fundações de Administração e Marketing, Atendimento ao Cliente, Técnicas de Vendedor, Matemática Comercial e Financeira, Empreendedorismo)</i></b></p>
 			<p><label>Curso</label>GERENCIAMENTO ADMINISTRATIVO</p>
-			<p><b><i>(Empreendedorismo, Gestão de administração de pequenas e médias empresas, Gestão de Recursos humanos, Auxiliar Administrativo, Técnicas de negociações,Planejamento estratégio);GESTÃO DE FINANÇAS ;EDUCAÇÃO FINANCEIRA;INVESTIMENTO;MARKTING; MARKTING DIGITAL.</i></b></p>
+			<p><b><i>(Empreendedorismo, Gestão de administração de pequenas e médias empresas, Gestão de Recursos humanos, Auxiliar Administrativo, Técnicas de negociações,Planejamento estratégio); Gestão de Finanças; Educação Financeira; Investimentos; Markting; Markting Digital.</i></b></p>
 			<p><label>Curso</label>ATENDENTE DE FARMACIA (UNISIC),ATENDENTE DE FARMACIA E DROGARIA,AGENTE DE ANDEMIAS,ATENDIMENTO DOMICILIAR,ENFERMAGEM DOMICILIAR,RECEPCIONISTA DE CLINICAS MEDICA,PRIMEIROS SOCORROS.</p>
 			<p><label>Curso</label>ASTRONOMIA,ASTROFISICA,COSMOLOGIA (UFSC)</p>
 		</div>
