--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
 
 		<div class="secao">
 			<h2>Formação</h2>
-			<p>Me chamo <strong>Talilo Tarlison</strong> ,tenho ensino-medio completo CETI Augustinho Brandão (2013). Estudante de Administração UESPI/UAPI (2022),  Tecnico em Enfermagem TECNORT (2021), e Desenvolvimento Web Full-Stack Alura (2022). Estou atualmente estudando HTML5. CSS e JS, React, Node, Bootstrap, MySQL...</p>
+			<p>Me chamo <strong>Talilo Tarlison</strong> ,tenho ensino-medio completo CETI Augustinho Brandão (2013). Estudante de Administração UESPI/UAPI (2022),  Tecnico em Enfermagem TECNORT (2021), e Desenvolvimento Web Full-Stack (2022). Estou atualmente estudando HTML5. CSS e JS, React, Node, Bootstrap, MySQL...</p>
 			<p><label>Curso</label>Bacharelado em Administração (UESPI/UAPI)</p>
 			<p><label>Curso</label>Tecnico de Enfermagem (TECNORT )</p>
-			<p><label>Curso</label>Desenvolvimento Web Full-Stack (ALURA) (UDEMY)</p>
+			<p><label>Curso</label>Desenvolvimento Web Full-Stack (UDEMY)</p>
 			<p><label>Curso</label>INFORMATICA BASICA</p>
 			<p><label>Curso</label>VENDAS (PRONATEC)</p>
 			<p><label>Curso</label>GERENCIAMENTO ADMINISTRATIVO</p>
