--- a/completo.html
+++ b/completo.html
@@ -46,10 +46,10 @@
 
 		<div class="secao">
 			<h2>Formação</h2>
-			<p>Me chamo <strong>Talilo Tarlison</strong> ,tenho ensino-medio completo CETI Augustinho Brandão (2013). Estudante de Administração UESPI/UAPI (2022),  Tecnico em Enfermagem TECNORT (2021), e Desenvolvimento Web Full-Stack Alura (2022). Estou atualmente estudando HTML5. CSS e JS, React, Node, Bootstrap, MySQL...</p>
+			<p>Me chamo <strong>Talilo Tarlison</strong> ,tenho ensino-medio completo CETI Augustinho Brandão (2013). Estudante de Administração UESPI/UAPI (2022),  Tecnico em Enfermagem TECNORT (2021), e Desenvolvimento Web Full-Stack (2022). Estou atualmente estudando HTML5. CSS e JS, React, Node, Bootstrap, MySQL...</p>
 			<p><label>Curso</label>Bacharelado em Administração (UESPI/UAPI)</p>
 			<p><label>Curso</label>Tecnico de Enfermagem (TECNORT )</p>
-			<p><label>Curso</label>Desenvolvimento Web Full-Stack (ALURA) (UDEMY)</p>
+			<p><label>Curso</label>Desenvolvimento Web Full-Stack (UDEMY)</p>
 
 			<p><label>Curso</label>INFORMATICA BASICA</p>
 			<p><b> <i>(Rede de computadores,Segurança da Informação, Hardware e Software, Windows e Linux, Microsoft Word, Microsoft Exel, Microsoft PowerPoint,Navegadores,E-mail,Armazenamento de dados em cloud computing, Arquitetura e Administração de banco de Dados,Ambiente de Servidores,Internet,Segurança na Internet,Segurança da Informação,Big Data, Data,Mining e Data Warehouse,Configurações de Rede)</i> </b></p>
